--- a/SimRend1.1/SimRend/SimRend/SimRend.csproj
+++ b/SimRend1.1/SimRend/SimRend/SimRend.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\GenerarPDF\" />
+  </ItemGroup>
+
 </Project>
